checkbox bug fix. checkbox viewable on iphone

--- a/assets/app-tailwind.css
+++ b/assets/app-tailwind.css
@@ -851,6 +851,10 @@ html {
   }
 }
 
+.x-invisible {
+  visibility: hidden !important;
+}
+
 .x-absolute {
   position: absolute !important;
 }
